--- a/vezba1/index.html
+++ b/vezba1/index.html
@@ -9,10 +9,18 @@
   </head>
   <body>
     <p>U toku je ispitni rok.</p>
-    <p class="inf">IT</p>
-    <p class="mat">PM</p>
-    <p class="inf">ENG</p>
-    <p class="mat">MNG</p>
+    <div>
+      <p class="inf">IT</p>
+    </div>
+    <p class="inf">IT x 2</p>
+
     <p id="jedinstven">Ja sam jedinstven.</p>
+
+    <h1>Na meni se vrsi hover.</h1>
+    <!--interni stil uvek ima prednost.-->
+
+    <a href="https://github.com/aminamarovac?tab=repositories"
+      >Idi na github
+    </a>
   </body>
 </html>
