--- a/vezba1/tabela/tabela.html
+++ b/vezba1/tabela/tabela.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td colspan="3">Systemenv2</td>
-            <td id="a" colspan="3">AppTest</td>
+            <td id="id2" colspan="3">AppTest</td>
             <td>bar</td>
         </tr>
         <tr>
