--- a/vezba1/vezba22/index.html
+++ b/vezba1/vezba22/index.html
@@ -8,6 +8,67 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+       <li> <a href="#">Pocetna</a></li>
+       <li><a href="#">O nama</a></li>
+       <li><a href="#">Kontakt</a></li>
+    </ul>
+    </header>
+    <div class="div">
+        <div class="dete" id="id1">
+        </div>
+        <div class="dete"></div>
+        <div class="dete"></div>
+        <div class="dete"></div>
+        <div class="dete"></div>
+        <div class="dete"></div>
+        <div class="dete"></div>
+        <table border="1">
+            <tr>
+                <th id="b"colspan="2">Level 1</th>
+                <td  id="b" colspan="4">Level 2</td>
+                <td  id="b" colspan="3">Level 3</td>
+                <td  id="b" colspan="3">Info</td>
+                <td id="b">Name</td>
+            </tr>
+            <tr>
+                <td colspan="2" rowspan="6">System</td>
+                <td rowspan="4" colspan="4">System apps</td>
+                <td colspan="3" rowspan="3">SystemEnv</td>
+                <td colspan="3"> App text </td>
+                <td>foo</td>
+            </tr>
+            <tr>
+        
+                <td colspan="3">App memory</td>
+                <td>foo</td>
+            </tr>
+            <tr>
+                <td colspan="3">AppTest</td>
+                <td>bar</td>
+            </tr>
+            <tr>
+                <td colspan="3">Systemenv2</td>
+                <td id="id2" colspan="3">AppTest</td>
+                <td>bar</td>
+            </tr>
+            <tr>
+                <td rowspan="2" colspan="4">System Memory</td>
+                <td rowspan="2" colspan="3">Memory test</td>
+                <td colspan="3">memory fu nc</td>
+                <td>foo</td>
+            </tr>
+            <tr>
+                <td colspan="3">Memory func</td>
+                <td>foo</td>
+            </tr>
+        </table>
+    </div>
+
     
+    <footer>
+        <h1>Ovaj tekst mora biti na sredini</h1>
+    </footer>
 </body>
 </html>
