--- a/vezba1/priprema/Document.html
+++ b/vezba1/priprema/Document.html
@@ -4,6 +4,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="shortcut icon" type="/vezba1/priprema/logo.jpg" hreflang="logo.jpg">
     <title>Document</title>
 
     <style>
@@ -106,7 +107,7 @@
         .div-with-img {
             width: 100%;
             height: 30vh;
-            background-image: url("img/slika2.jpg");
+            background-image: url("/vezba1/priprema/slika.img");
             background-position: center;
             background-size: cover;
             background-attachment: fixed;
@@ -121,6 +122,26 @@
             background-color: rgb(67, 60, 60);
         }
 
+        @media(max-width:670px){
+            .footer{
+                background-color: red;
+            }
+
+            .col{
+                overflow: hidden;
+            }
+
+        }
+
+        @media(max-width:500px){
+            .footer{
+                background-color:green
+            }
+        
+        .krug{
+            display: none;
+        }}
+
     </style>
 </head>
 
@@ -130,7 +151,7 @@
         <div class="wrap">
             <div class="sidebar">
                 <div class="krug">
-                    <img src="file:///C:/Users/HP/Downloads/img/avatar.jpg" alt="">
+                    <img src="avatar.jpg" alt="">
                 </div>
 
                 <form action="file:///C:/Users/HP/Downloads/priprema-za-kolokvijum%20(1).html" class="forma">
@@ -195,6 +216,7 @@
             </div>
         </div>
         <div class="footer"></div>
+        <footer></footer>
     </div>
 
 
